eycart-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-cart
  namespace: my-apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: ey-cart
  template:
    metadata:
      labels:
        app: ey-cart
    spec:
      containers:
      - name: ey-cart
        image: muralisocial123/ey-cart:v1.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: eycart-service
  namespace: my-apps
spec:
  type: clusterIP
  selector:
    app: ey-cart
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30004
