flipkart-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-app
  namespace: my-apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flipkart-app
  template:
    metadata:
      labels:
        app: flipkart-app
    spec:
      containers:
      - name: flipkart-app
        image: muralisocial123/flipkart-clone-kuberox:v1.1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
  namespace: my-apps
spec:
  type: NodePort
  selector:
    app: flipkart-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
