flower-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-app
  namespace: my-apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flower-app
  template:
    metadata:
      labels:
        app: flower-app
    spec:
      containers:
      - name: flower-app
        image: muralisocial123/kyndrl-flower-app:v1.1.0
        ports:
        - containerPort: 3015
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: my-apps
spec:
  type: ClusterIP
  selector:
    app: flower-app
  ports:
    - port: 3015
      targetPort: 3015
