transaction-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-app
  namespace: my-apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: transaction-app
  template:
    metadata:
      labels:
        app: transaction-app
    spec:
      containers:
      - name: transaction-app
        image: muralisocial123/transaction-app:v1.0.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: my-apps
spec:
  type: ClusterIP
  selector:
    app: transaction-app
  ports:
    - port: 3000
      targetPort: 3000
