eycart-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eycart-routes
  namespace: my-apps
spec:
  parentRefs:
  - name: k-kgateway
  rules:
    - matches:
       - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replicaPrefixMatch: /
      backendRefs:
        - name: eycart-service
          port: 3000
